Sorgente/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Motivazione perdita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Altra società</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Donazione</fullName>
                </value>
                <value>
                    <fullName>Gravidanza problematica</fullName>
                </value>
                <value>
                    <fullName>Motivazione economica</fullName>
                </value>
                <value>
                    <fullName>Non interessato</fullName>
                </value>
                <value>
                    <fullName>Non in gravidanza</fullName>
                </value>
                <value>
                    <fullName>Non risponde</fullName>
                </value>
                <value>
                    <fullName>Numero errato</fullName>
                </value>
                <value>
                    <fullName>Parto anticipato</fullName>
                </value>
                <value>
                    <fullName>Se interessata richiama lei</fullName>
                </value>
                <value>
                    <fullName>Troppo vicino al parto</fullName>
                </value>
                <value>
                    <fullName>Test da ripetere</fullName>
                </value>
                <value>
                    <fullName>Problemi procedura</fullName>
                </value>
                <value>
                    <fullName>Rescissione contratto</fullName>
                </value>
                <value>
                    <fullName>Complicazioni parto</fullName>
                </value>
                <value>
                    <fullName>Perdita del bambino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metodo_di_pagamento_kit__c</fullName>
        <label>Metodo di pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bonifico</fullName>
                </value>
                <value>
                    <fullName>Carta di credito</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Giroconto postale</fullName>
                </value>
                <value>
                    <fullName>Contanti o assegno alla consegna</fullName>
                </value>
                <value>
                    <fullName>Contanti</fullName>
                </value>
                <value>
                    <fullName>Assegno</fullName>
                </value>
                <value>
                    <fullName>Bollettino postale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metodo_pagamento_servizio__c</fullName>
        <label>Metodo pagamento servizio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bonifico</fullName>
                </value>
                <value>
                    <fullName>RID</fullName>
                </value>
                <value>
                    <fullName>Carta di credito</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Bollettino postale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modalit_di_pagamento_c__c</fullName>
        <label>Modalità di pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unica soluzione</fullName>
                </value>
                <value>
                    <fullName>Agevolazione Sorgente Genetica</fullName>
                </value>
                <value>
                    <fullName>Agevolazione Sorgente Staminali</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_Sconto__c</fullName>
        <label>Motivazione Sconto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Già cliente</fullName>
                </value>
                <value>
                    <fullName>Programma amico</fullName>
                </value>
                <value>
                    <fullName>Medico</fullName>
                </value>
                <value>
                    <fullName>Dipendente</fullName>
                </value>
                <value>
                    <fullName>Adesione multipla</fullName>
                </value>
                <value>
                    <fullName>i-Contrazioni</fullName>
                </value>
                <value>
                    <fullName>Parente dipendente</fullName>
                </value>
                <value>
                    <fullName>Genoma</fullName>
                </value>
                <value>
                    <fullName>Cross selling</fullName>
                </value>
                <value>
                    <fullName>Fiera</fullName>
                </value>
                <value>
                    <fullName>Promozioni temporane</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_ripetizione__c</fullName>
        <label>Motivazione ripetizione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corriere</fullName>
                </value>
                <value>
                    <fullName>Sangue insufficiente</fullName>
                </value>
                <value>
                    <fullName>DNA insufficiente</fullName>
                </value>
                <value>
                    <fullName>Emolisi campione</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motore_di_ricerca_Perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Motore di ricerca Perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motore_di_ricerca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Motore di ricerca</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_operatori_prelievo__c</fullName>
        <label>N° operatori prelievo</label>
        <summaryFilterItems>
            <field>Ruolo_degli_Specialisti_Collaboratori__c.Ruolo__c</field>
            <operation>equals</operation>
            <value>Operatore prelievo</value>
        </summaryFilterItems>
        <summaryForeignKey>Ruolo_degli_Specialisti_Collaboratori__c.Opportunita__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_special__c</fullName>
        <label>N special</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Fatturazione__c</fullName>
        <label>Nome Fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Numero_citofono_1__c</fullName>
        <label>Contatto fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Numero_citofono__c</fullName>
        <label>Nome spedizione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_figlio_1__c</fullName>
        <label>Nome figlio 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_figlio_2__c</fullName>
        <label>Nome figlio 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_figlio_3__c</fullName>
        <label>Nome figlio 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_tutore_legale__c</fullName>
        <label>Nomi completi dei tutori legali</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_contattare_SS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contattare per SS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_problemi_spedizione__c</fullName>
        <label>Note problemi spedizione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notifica_ordine_kit_ctr_agente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifica ordine kit/ctr agente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Numero_di_telefono_spedizione__c</fullName>
        <label>Numero di telefono spedizione</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Numero_pratica_DHL__c</fullName>
        <label>Numero pratica DHL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_pratica__c</fullName>
        <externalId>true</externalId>
        <label>Numero pratica Gestionale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_rate_agevolazione__c</fullName>
        <label>Numero rate agevolazione</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operatore_prelievo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operatore prelievo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Categoria_collaboratore__c</field>
                <operation>equals</operation>
                <value>Operatore prelievo</value>
            </filterItems>
            <filterItems>
                <field>$Source.Provincia_spedizione__c</field>
                <operation>equals</operation>
                <valueField>Contact.MailingState</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prelievi effettuati</relationshipLabel>
        <relationshipName>Opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opzione_Terapia__c</fullName>
        <label>Opzione Terapia</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>95</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <label>Origine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Amici/conoscenti</fullName>
                </value>
                <value>
                    <fullName>Collaboratore</fullName>
                </value>
                <value>
                    <fullName>Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>Cross selling</fullName>
                </value>
                <value>
                    <fullName>Cross selling - Aurora</fullName>
                </value>
                <value>
                    <fullName>Da verificare</fullName>
                </value>
                <value>
                    <fullName>Fiera</fullName>
                    <label>Fiere e Convegni</label>
                </value>
                <value>
                    <fullName>Già cliente</fullName>
                </value>
                <value>
                    <fullName>Giornali/riviste</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Motore di ricerca</fullName>
                </value>
                <value>
                    <fullName>Pieghevole</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Programma Amico</fullName>
                </value>
                <value>
                    <fullName>Siti e app satellite</fullName>
                </value>
                <value>
                    <fullName>Siti extra gruppo</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origine_in_fase_di_ordine__c</fullName>
        <label>Origine in fase di ordine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Amici/conoscenti</fullName>
                </value>
                <value>
                    <fullName>Collaboratore</fullName>
                </value>
                <value>
                    <fullName>Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>Cross selling</fullName>
                </value>
                <value>
                    <fullName>Cross selling - Aurora</fullName>
                </value>
                <value>
                    <fullName>Da verificare</fullName>
                </value>
                <value>
                    <fullName>Fiera</fullName>
                    <label>Fiere e Convegni</label>
                </value>
                <value>
                    <fullName>Già cliente</fullName>
                </value>
                <value>
                    <fullName>Giornali/riviste</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Motore di ricerca</fullName>
                </value>
                <value>
                    <fullName>Pieghevole</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Programma Amico</fullName>
                </value>
                <value>
                    <fullName>Siti e app satellite</fullName>
                </value>
                <value>
                    <fullName>Siti extra gruppo</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ospedale_Punto_prelievo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ospedale/Punto prelievo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Professional</value>
            </filterItems>
            <filterItems>
                <field>Account.Struttura_abilitata_ai_parti__c</field>
                <operation>equals</operation>
                <value>Si</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunità (Ospedale/Punto prelievo)</relationshipLabel>
        <relationshipName>Opportunit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ospedale_non_ancora_deciso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ospedale non ancora deciso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ospedale_prelievo_parto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ospedale prelievo parto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Professional</value>
            </filterItems>
            <filterItems>
                <field>Account.Struttura_abilitata_ai_parti__c</field>
                <operation>equals</operation>
                <value>Si</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunità (Ospedale prelievo parto)</relationshipLabel>
        <relationshipName>Opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partita_IVA__c</fullName>
        <label>Partita IVA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parto_in_Emilia_Romagna__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parto in Emilia Romagna</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Piano__c</fullName>
        <label>Piano</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pieghevole__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pieghevole</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pieghevole_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pieghevole perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prelievo_ripetuto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prelievo ripetuto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problemi_con_consegna__c</fullName>
        <label>Problemi con consegna</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non entro data prevista</fullName>
                </value>
                <value>
                    <fullName>Spedito ad indirizzo sbagliato</fullName>
                </value>
                <value>
                    <fullName>Kit danneggiato o aperto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programma_Amico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Programma Amico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programma_amico_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Programma amico perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provincia_Referente__c</fullName>
        <formula>Ginecologo__r.MailingState</formula>
        <label>Provincia Referente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia_fatturazione__c</fullName>
        <label>Provincia fatturazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provincia_prelievo_workflow__c</fullName>
        <label>Provincia prelievo (workflow)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agrigento</fullName>
                </value>
                <value>
                    <fullName>Alessandria</fullName>
                </value>
                <value>
                    <fullName>Ancona</fullName>
                </value>
                <value>
                    <fullName>Aosta</fullName>
                </value>
                <value>
                    <fullName>Arezzo</fullName>
                </value>
                <value>
                    <fullName>Ascoli Piceno</fullName>
                </value>
                <value>
                    <fullName>Asti</fullName>
                </value>
                <value>
                    <fullName>Avellino</fullName>
                </value>
                <value>
                    <fullName>Bari</fullName>
                </value>
                <value>
                    <fullName>Barletta-Andria-Trani</fullName>
                </value>
                <value>
                    <fullName>Belluno</fullName>
                </value>
                <value>
                    <fullName>Benevento</fullName>
                </value>
                <value>
                    <fullName>Bergamo</fullName>
                </value>
                <value>
                    <fullName>Biella</fullName>
                </value>
                <value>
                    <fullName>Bologna</fullName>
                </value>
                <value>
                    <fullName>Bolzano</fullName>
                </value>
                <value>
                    <fullName>Brescia</fullName>
                </value>
                <value>
                    <fullName>Brindisi</fullName>
                </value>
                <value>
                    <fullName>Cagliari</fullName>
                </value>
                <value>
                    <fullName>Caltanissetta</fullName>
                </value>
                <value>
                    <fullName>Campobasso</fullName>
                </value>
                <value>
                    <fullName>Carbonia-Iglesias</fullName>
                </value>
                <value>
                    <fullName>Caserta</fullName>
                </value>
                <value>
                    <fullName>Catania</fullName>
                </value>
                <value>
                    <fullName>Catanzaro</fullName>
                </value>
                <value>
                    <fullName>Chieti</fullName>
                </value>
                <value>
                    <fullName>Como</fullName>
                </value>
                <value>
                    <fullName>Cosenza</fullName>
                </value>
                <value>
                    <fullName>Cremona</fullName>
                </value>
                <value>
                    <fullName>Crotone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provincia_spedizione__c</fullName>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Punti_Consiglio__c</fullName>
        <formula>Ginecologo__r.PC_SS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Punti Consiglio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punto_prelievo__c</fullName>
        <label>Punto prelievo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domicilio cliente</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ragione_sociale_citofono__c</fullName>
        <label>Ragione sociale/citofono</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regione_Parto__c</fullName>
        <label>Regione Parto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emilia Romagna</fullName>
                </value>
                <value>
                    <fullName>Altra</fullName>
                </value>
                <value>
                    <fullName>Emilia Romgna</fullName>
                    <isActive>false</isActive>
                    <label>Emilia Romgna</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regione__c</fullName>
        <label>Regione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reparto__c</fullName>
        <label>Reparto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsabile_originario__c</fullName>
        <label>Responsabile originario</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsabile_prevendita__c</fullName>
        <label>Responsabile prevendita</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Restituzione_Kit__c</fullName>
        <label>Restituzione Kit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit restuito</fullName>
                </value>
                <value>
                    <fullName>Kit non restituito</fullName>
                </value>
                <value>
                    <fullName>Kit non rimborsabile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Riaperto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Riaperto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rilascio_nulla_osta__c</fullName>
        <label>Rilascio nulla osta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>si</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>il giorno del parto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ripetizione_di__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ripetizione di</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunità ripetuta</relationshipLabel>
        <relationshipName>Opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sconto_Totale__c</fullName>
        <label>Sconto Totale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sconto_su_Kit__c</fullName>
        <label>Sconto su Kit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sconto_su_Servizio__c</fullName>
        <label>Sconto su Servizio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Screening_Neonatale_report__c</fullName>
        <label>Screening Neonatale</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>495</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Screening_neonatale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screening neonatale_C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segnalazione_ginex_non_assegnato_a_SAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Segnalazione ginex non assegnato a SAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servic_point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service point</label>
        <referenceTo>Service_point__c</referenceTo>
        <relationshipLabel>Opportunità</relationshipLabel>
        <relationshipName>Opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Siti_e_app__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Siti e app satellite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siti_e_app_satellite_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Siti e app satellite perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siti_extra_gruppo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Siti extra gruppo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siti_extra_gruppo_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Siti extra gruppo perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_media_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social media perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sottocategoria_origine__c</fullName>
        <label>Sottocategoria origine</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origine__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CSCO</fullName>
                </value>
                <value>
                    <fullName>Ok Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>Diagnosi prenatale</fullName>
                </value>
                <value>
                    <fullName>BRCA</fullName>
                </value>
                <value>
                    <fullName>Baby&apos;s Voice</fullName>
                </value>
                <value>
                    <fullName>i-Contrazioni</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Bimbinfiera</fullName>
                </value>
                <value>
                    <fullName>i-Gravidanza</fullName>
                </value>
                <value>
                    <fullName>i-Obstetrics</fullName>
                </value>
                <value>
                    <fullName>i-Mamma</fullName>
                </value>
                <value>
                    <fullName>Sito Sorgente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>